# pipeline_2p

./: .gitignore  README.md  batch_manager.ipynb  batch_overview.ipynb  devel_notebook.ipynb  luminance_correction_comparison.ipynb  luminance_test.ipynb  preprocess_batch.py  preprocessing_quality.ipynb  pyproject.toml  quality_checks.py  requirements.txt  session_overview.ipynb  start.ipynb  sync_devel.py  tiff_plotter.ipynb  utils.py  visualize.ipynb
docs/: batches.txt
logreader/: create_logreader.ipynb  logfile_check.ipynb  logreader.py  preprocess_sessions.py  read_session_log.ipynb
notebooks/: flickering.ipynb  logfile_check.ipynb  luminance_correction_comparison.ipynb  luminance_test.ipynb  multisession_registration.ipynb  preprocessing_quality.ipynb
old/: preprocess_session.py  preprocess_session_v1.py  session_explorer.ipynb  visualization.ipynb  visualize.ipynb
pipeline/: crop_selection.ipynb  functions.py  multisession_registration.ipynb  mymemmap.py  preprocess_batch.py  preprocess_session.py  preprocessing.py  session_explorer.ipynb
pipeline/caiman_preprocesing/: data_base.py  running_preprocessing_2p.py
pipeline/logreader/: logreader.py
pipeline/logreader/matlab/: p2_I2C_readout_01_old.m  p2_log_readout_02.m  p2_match_trlInfo_to_scanner_time_01.m  p2_synch_scan_log_01.m
pipeline/syncronization/: syncronizarion_scanimage_log.ipynb
pipeline/syncronization/matlab/: p2_I2C_readout_01.m  p2_log_readout_01.m
pipeline/video/: VideoPipeline.py  parameters.json
scripts/: background_study.py
utils/: data_quality.py  utils.py
