[tool.poetry]
name = "pipeline-2p"
version = "0.1.0"
description = "Pipeline for the preprocessing of 2p calcium imaging videos
authors = ["davidespalla <spalladavide.92@gmail.com>"]
readme = "README.md"
packages = [{include = "pipeline_2p"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
